--- a/src/components/NowShowing/NowShowing.css
+++ b/src/components/NowShowing/NowShowing.css
@@ -34,7 +34,7 @@
 }
 
 .date-nav__arrow:disabled {
-  opacity: 0.3;
+  opacity: 0.45;
   cursor: not-allowed;
 }
 
